--- a/css.work/style.css
+++ b/css.work/style.css
@@ -1,303 +1,22 @@
- 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
-
-
- body{
+body{
     background: #252b42;
-    
- }
-   
-.container-cards{
-   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
 }
 
-.product-cards{
-    width: 240px;
-    height: 658px;
-    background: #fff;
-    margin: 10px;
-    
-}
-
-.img-card{
-    width: 238px;
-    height: 230px;
-
-}
-
-.category-card{
-    width: 51px;
-    background: #e74040;
-    border-radius: 3px;
-    margin-top: 20px;
-    margin-left: 10px;
-    position: absolute;
-    
-    
-}
-.text-category-card{
-    text-align: center;
-    color: #fff;
-}
-
-.icons-card{
-    margin-left: 30px;
-    display: flex;
-    align-items: center;
-     justify-content: space-around;
-    margin-right: 10px;
-   
-}
-
-.icon-1{
-    margin-left: 20px;
-}
-
-.icon-2{
-    margin-right: 10px;
-    padding-left: 10px;
-
-}
-
-.icon-3{
-    margin-right: 50px;
-}
-
-
-
-
-
-    
-
-.name-price{
-    margin-top: 30px;
+.header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
-    margin-right: 10px;
-    padding: 5px; 
-
-}
-
-.name-price .name {
-    font-size: 16px;
-    color: #23a6f0;
-    margin-top: 30px;
-    margin-left: 10px;
-    font-weight: 700;
-
-}
-
-.text-border{
-    margin: 5px;
-    font-size: 15px;
-}
-
-.title-card{
-    width: 131px;
-    height: 24px;
-    font-size: 16px;
-    color: #252b42;
-    text-align: center;
-    margin-left: 5px;
-    font-weight: 700;
-    
-   
-    
-    
-    
-   
-    
-   
-     
-
-    
+    background-color: #252b42;
     
 }
 
-.description-card{ 
-    width: 182px;
-    height: 40px;
-    margin-left: 10px;
-    font-size: 14px;
-    color: #737373;
-    font-family: arial;
-    line-height: 20px;
-    margin-left: 20px;
-    
-    
-    
-    
-    
-}
-
-.text-vector{
-    height: 57px;
-    width: 24px;
-    color: #737373;
-    margin: 1px;
-    font-size: 14px;
-    margin-left: 10px;
-    font-weight: 700;
-
-
-
-}
-
-.text-h5-1{
-    width: 52px;
-    height: 24px;
-    font-size: 16px;
-    color: #bdbdbd;
-    line-height: 24px;
-    text-align: center;
-    margin-left: 10px;
-    margin-top: 40px;
-    font-weight: 700;
-    
-
-}
-
-.text-h5-2{
-    
-    color: #40bb15;
-    font-size: 16px;
-    line-height: 24px;
-    margin-left: 1px;
-    margin-top: 40px;
-    font-weight: 700;
-}
-
-.vector-card-1{
-    margin-left: 30px;
-    margin-top: 5px;
-    
-    
-    
-    
-}  
-
-.vector-card-2{
-    margin-left: 5px;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    
-    
-    
-
-    
-    
-    
-    
-    
-    
-}
-
-.icon-card-2{
+.header ul li{
     display: flex;
-    justify-content:space-between;
-      margin: 20px;
-      color: #737373;
 }
 
-.border-card{
-    width: 50px;
-    height: 26px;
-    background: #252b42;
-    border-radius: 20px;
-    color: #fff;
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.colicion-img{
-font-size: 15px;
-color: #737373;
-
-
-    
-}
-
-.vector-img-4{
-top: 0px;
-font-size: 15px;
-font-weight: 400;
-text-align: left;
-
-
-
-
-}
-
-.colicion-img-2{
-font-size: 15px;
-font-weight: 400;
-line-height: 16px;
-text-align: left;
-
-}
-
-.text-icon{
-    margin-left: 10px;
-}
-
-.text-icon-2{
-    margin-left: 10px;
-}
-
-.text-icon-3{
-    margin-left: 10px;
-}
-
-
-
-.border-img{
-    
-    margin-left: 7px;
-    margin-top: 1px;
-    width: 15px;
-    height: 14px;
-}
-
-   
-
-
-.texts-h5{
-    margin-top: 14px;
-    margin-left: 10px;
-}
-
-
-
-.button-card{
-    width: 160px;
-    height: 50px;
-    background: #fff;
-    border: 1px solid #23a6f0;
-    border-radius: 30px;
-    margin-left: 18px;
-    
-    
-}
-
-.text-btn{
-    color: #23a6f0;
-    font-weight: 700;
-    text-align: left;
-    margin-right: 10px;
-}
-
-
-
-.vector-img-1{
-    margin-left: 5px;
-    position: absolute;
-    margin-top: 10px;
-}
