--- a/css.work/style.css
+++ b/css.work/style.css
@@ -1,22 +1,3 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+ul {
+    list-style: none;
 }
-
-body{
-    background: #252b42;
-}
-
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #252b42;
-    
-}
-
-.header ul li{
-    display: flex;
-}
-
