--- a/css.work/style.css
+++ b/css.work/style.css
@@ -1,3 +1,84 @@
-ul {
-    list-style: none;
+
+
+ body{
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRs0Kq_chuRUAlS-kBBYEZnF2lxWVF5w6OaqA&usqp=CAU);
+ background-repeat: no-repeat;
+
+ position: absolute;
+ margin-top: 25px;
+ background-size: cover;
+ background-attachment: fixed;
+ 
+ 
+     
+ }
+
+
+ .div-1{
+  background-color: red;
+  width: 200px;
+  height: 200px;
+  border: 2px solid black;
+  display: inline-block;
+
+  
+  
+
+}
+
+.div-2{
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  display: inline-block;
+  margin-left: 40px;
+  
+}
+
+.div-3{
+  margin: 100px;
+  max-width: 900px;
+  min-width: 400px;
+  padding-top: 30px;
+  padding-left: 15px;
+ 
+  
+  
+
+
+
+}
+
+ 
+input{
+  border-radius: 5px;
+  
+}
+
+.text-div3{
+  margin-left: 30px;
+  font-style: italic;
+}
+
+
+
+span{
+  margin-right: 5px;
+}
+
+
+
+
+
+  
+
+
+
+a:hover{
+  color: darkblue;
+}
+
+.title-contact{
+  font-style: italic;
+
 }
